--- a/paths.yaml
+++ b/paths.yaml
@@ -1,4 +1,4 @@
 mappings:
- - /content/xsc-xwalk-site/:/
- - /content/xsc-xwalk-site/metadata.json:/metadata.json
- - /content/xsc-xwalk-site/redirects.json:/redirects.json
+ - /content/moncler/:/
+ - /content/moncler/metadata.json:/metadata.json
+ - /content/moncler/redirects.json:/redirects.json
